# AvatarKit-AI

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.githooks/: pre-push
.github/workflows/: ci.yml
apps/api/: package.json
apps/api/src/: index.ts
apps/web/: next.config.ts  package.json  tsconfig.json
apps/widget/: package.json
apps/widget/src/: browser-script.ts  index.ts
docs/: development.md  project-state.md
docs/architecture/: audit-logging.md  avatar-kit-ai-technical-design.md  conversation-intelligence.md  data-governance.md  deployment-readiness.md  manual-verification-checklist.md  phase-guardrails.md  rate-limiting.md  runtime-fallbacks.md  security.md
docs/development/: phase-19-public-api-sdk.md  phase-20-billing-foundation.md  phase-21-admin-operations-observability.md  phase-22-self-hosted-avatar-engine-research.md  phase-23-kiosk-mode.md  phase-24-agency-white-label.md
docs/product/: plan_v1.md
docs/research/: self-hosted-avatar-engine.md
docs/specifications/: avatar-kit-ai-software-specification.md
prisma/: schema.prisma  seed.mjs
scripts/: safe-push.sh  verify-push.sh
services/ai-runtime/app/: main.py
services/ai-runtime/tests/: test_app.py
services/ingestion/ingestion_worker/: worker.py
services/ingestion/tests/: test_ingestion_worker.py
services/media-worker/media_worker/: worker.py
services/media-worker/tests/: test_media_worker.py
(+146 files in other folders)
