[project]
name = "avatarkit-ai-services"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.121.0",
  "pydantic-settings>=2.11.0",
  "uvicorn[standard]>=0.38.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.14.0",
  "mypy>=1.18.0"
]

[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["services"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
